# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.625 2006/05/19 22:02:56 wolf31o2 Exp $

  19 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/cdtar/yaboot-1.3.13-cdtar.tar.bz2:
  Updated yaboot cdtar from Daniel Ostrow <dostrow@gentoo.org> so it will boot
  properly on IBM PPC64 machines.

  19 May 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/generic_stage_target.py:
  Fix DIGESTS output

  16 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Removed x-setup from default runlevel, as it is now controlled via the
  autoconfig init script.

  15 May 2006; Eric Edgar <rocket@gentoo.org> arch/ppc64.py:
  Fix ppc64 based arches to subclass ppc64

  15 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/livecd_stage1_target.py:
  Use the full category/package name for livecd-tools.

  13 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Make copies and deletes recursive for firmware since some packages put their
  firmware in a subdirectory.

  10 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix detection of the Installer.

  10 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc64.py:
  Added 970, power3, power4, and power5 sub-arches for ppc64.

  09 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Removed portion of livecdfs-update.sh that created /etc/conf.d/net as it is
  no longer necessary and can cause possible problems with Installer-based
  installs.

  08 May 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_lock.py:
  recursive directory create

  01 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py:
  Changed a display error from bug #131502 and rolling 2.0_rc45.

  25 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>