@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.625 2006/05/19 22:02:56 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.626 2006/05/23 20:00:19 wolf31o2 Exp $
+
+  23 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage1/stage1-controller.sh:
+  Added a -type f to the find call in stage1 for bug #132180.
 
   19 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/cdtar/yaboot-1.3.13-cdtar.tar.bz2:
